<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="button_allow" tools:keep="@string/button_allow">Allow</string>
    <string name="button_deny" tools:keep="@string/button_deny">Deny</string>
    <string name="media">Media</string>
    <string name="docs">Docs</string>
    <string name="view_all">View all</string>
    <string name="message_otp">We will send you verification code on this number.</string>
    <string name="content_privacy">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Feugiat sed lectus vestibulum mattis. Tincidunt praesent semper feugiat nibh sed pulvinar proin gravida hendrerit. Tristique nulla aliquet enim tortor. Donec et odio pellentesque diam volutpat commodo. Mi ipsum faucibus vitae aliquet nec. In hac habitasse platea dictumst vestibulum rhoncus. Varius vel pharetra vel turpis nunc eget lorem dolor. At ultrices mi tempus imperdiet nulla malesuada. Et netus et malesuada fames ac turpis egestas. Aliquam sem fringilla ut morbi. Scelerisque eleifend donec pretium vulputate sapien nec. Ut tortor pretium viverra suspendisse. Habitant morbi tristique senectus et netus et malesuada fames ac. Condimentum lacinia quis vel eros donec ac odio tempor orci. Sed viverra tellus in hac habitasse platea dictumst. A cras semper auctor neque vitae tempus quam. Sollicitudin tempor id eu nisl nunc. Nulla aliquet enim tortor at auctor urna nunc.

Quis vel eros donec ac odio tempor orci. Sit amet consectetur adipiscing elit pellentesque habitant morbi. Non diam phasellus vestibulum lorem sed risus ultricies tristique. Morbi enim nunc faucibus a pellentesque sit amet porttitor. Scelerisque in dictum non consectetur. Metus aliquam eleifend mi in nulla posuere. In hac habitasse platea dictumst. Ultricies leo integer malesuada nunc vel risus commodo viverra maecenas. Lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi. Metus dictum at tempor commodo ullamcorper a lacus vestibulum sed. Egestas diam in arcu cursus euismod quis viverra.

Neque aliquam vestibulum morbi blandit. Molestie nunc non blandit massa enim nec dui. Donec et odio pellentesque diam volutpat commodo sed egestas egestas. Augue interdum velit euismod in pellentesque massa placerat. Nunc id cursus metus aliquam. Pulvinar pellentesque habitant morbi tristique senectus. Eu turpis egestas pretium aenean pharetra magna ac placerat vestibulum. Laoreet non curabitur gravida arcu ac tortor dignissim convallis aenean. Ac tortor dignissim convallis aenean et tortor at risus viverra. Vitae purus faucibus ornare suspendisse sed nisi lacus sed viverra. Pulvinar sapien et ligula ullamcorper malesuada proin libero nunc consequat. Consequat id porta nibh venenatis. Sit amet luctus venenatis lectus magna. Sit amet massa vitae tortor condimentum. Nisi lacus sed viverra tellus in hac habitasse platea. Nisi lacus sed viverra tellus in hac habitasse platea dictumst. Non odio euismod lacinia at quis risus. Mollis aliquam ut porttitor leo.</string>
    <string name="hint_phone">Your phone number</string>
    <string name="confirm">Confirm</string>
    <string name="resend">Resend?</string>
    <string name="verification_code">Verification Code</string>
    <string name="otp_sending">Sending OTP</string>
    <string name="otp_verifying">Verifying OTP</string>
    <string name="otp_verifying_msg">Verifying OTP…</string>
    <string name="logging_in">Logging you in!</string>
    <string name="error_create_user">Something went wrong, unable to create user.</string>
    <string name="verification_cancel_title">Cancel verification</string>
    <string name="verification_cancel_message">Verification is in progress! do you want to cancel and go back?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="validation_req_country">Select country code!</string>
    <string name="validation_req_phone">Enter phone number!</string>
    <string name="validation_req_phone_valid">Enter a valid phone number</string>
    <string name="confirm_phone">One time password will be sent on this number! Continue with this number?</string>
    <string name="edit">Edit</string>
    <string name="hint_search">Search</string>
    <string name="tab_title_chat">Chats</string>
    <string name="tab_title_group">Groups</string>
    <string name="tab_title_call">Calls</string>
    <string name="delete_chat_title">Delete chat</string>
    <string name="delete_chat_message">Continue deleting selected chats?</string>
    <string name="create_group">Create group</string>
    <string name="done">DONE</string>
    <string name="hint_group_name">Group name</string>
    <string name="group_info">Group info</string>
    <string name="short_description_of_group">Short description of group!</string>
    <string name="participants_0">Participants (0)</string>
    <string name="add_more">+ Add more</string>
    <string name="get_image_title">Get image from</string>
    <string name="get_image_camera">Camera</string>
    <string name="get_image_gallery">Gallery</string>
    <string name="validation_req_participant">No participants selected</string>
    <string name="validation_req_name">User name can\'t be empty</string>
    <string name="validation_req_description">Give this group a short description</string>
    <string name="err_upload_image">Unable to upload image.</string>
    <string name="group_created">Group created</string>
    <string name="error_request">Unable to process request at this time</string>
    <string name="back">Back</string>
    <string name="your_name">Enter your name</string>
    <string name="share_app">Share app</string>
    <string name="rate_app">Rate app</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="contact_us">Contact us</string>
    <string name="logout">Logout</string>
    <string name="logout_title">Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="validation_req_username">Name cannot be empty</string>
    <string name="validation_req_status">Status cannot be empty</string>
    <string name="updated">Updated!</string>
    <string name="type_your_message">Type your message</string>
    <string name="recording_cancelled">Recording cancelled</string>
    <string name="message_copied">Messages copied</string>
    <string name="delete_msg_title">Delete messages</string>
    <string name="delete_msg_message">Continue deleting selected messages?</string>
    <string name="removed_from_group">You no longer belong to this group.</string>
    <string name="just_moment">Just a moment..</string>
    <string name="voice_calling">Voice Calling</string>
    <string name="video_calling">Video Calling</string>
    <string name="video_calling_in">Incoming video call</string>
    <string name="voice_calling_in">Incoming voice call</string>
    <string name="permission_mic">This application needs permission to use your microphone to function properly.</string>
    <string name="gave_miss">Gave you a miss call</string>
    <string name="err_upload_img">Unable to upload image.</string>
    <string name="phone_number">Phone number</string>
    <string name="status">Status</string>
    <string name="mute_notifications">Mute notifications</string>
    <string name="no_members">No new members to add</string>
    <string name="add_member_title">Add member(s)</string>
    <string name="member_added">Members added</string>
    <string name="dial_permission">To dial number automatically for you we need this permission</string>
    <string name="remove_user_title">Remove user</string>
    <string name="member_removed">Member Removed</string>
    <string name="invite_short">invite</string>
    <string name="name">Name</string>
    <string name="file_not_found">File not found! File is either Moved, Deleted or Renamed.</string>
    <string name="empty_text_chat_list">Your chats appear here. Start chatting by selecting a user.</string>
    <string name="empty_group_chat_list">Your group chats appear here. Start chatting by selecting a group.</string>
    <string name="empty_log_call_list">Your call logs appear here. Start by selecting a user.</string>
    <string name="empty_contact_list_for_group">You don\'t have sufficient friends to be in a group</string>
    <string name="otp_sending_msg">To your phone number</string>
    <string name="error_detail">Something went wrong</string>
    <string name="otp_sent">Please type the verification code sent to</string>
    <string name="slide_cancel">(Slide left to cancel)</string>
    <string name="invitation_group">Hey, I invite you to this new group.</string>
    <string name="add_member_message">Are you sure you want to add members to this group?</string>
    <string name="remove_user_message">Are you sure you want to remove</string>
    <string name="remove_myself_message">Are you sure you want to remove yourself?</string>
    <string name="member_count">member(s)</string>
    <string name="participants_count">Participants</string>
    <string name="selected_count">selected</string>
    <string name="group_participants_error">Unable to load all group members. Please refresh your users then check again.</string>
    <string name="uploading">Uploading</string>
    <string name="upload_fail">Uploading failed</string>
    <string name="up_and_send">Upload And Send</string>
    <string name="hey_there">Hey there! I am using</string>
    <string name="download_now">Download now</string>
    <string name="setup_profile_msg">Lets setup your profile basics first.</string>
    <string name="you">You</string>
    <string name="changed_group_image">changed group image</string>
    <string name="changed_group_name">changed group name</string>
    <string name="changed_group_status">changed group status</string>
    <string name="added">added</string>
    <string name="removed">removed</string>
    <string name="leave_group">Leave Group</string>
    <string name="downloading">Downloading</string>
    <string name="all_set">All Set</string>
    <string name="left_group">left group</string>
    <string name="hold_record">Hold down to record.</string>
    <string name="file_na">File unavailable</string>
    <string name="enter_your_status">Enter your status</string>
    <string name="missed">Missed</string>
    <string name="incoming">Incoming</string>
    <string name="outgoing">Outgoing</string>
    <string name="close">Close</string>
    <string name="add_to_contact">Add to contact</string>
    <string name="add_member">Add member</string>
    <string name="forward_message">Forward Message</string>
    <string name="forward_to">Forward to:</string>
    <string name="sinch_start_error">Service is not started. Try stopping the service and starting it again before placing a call.</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="contact">Contact</string>
    <string name="document">Document</string>
    <string name="image">Image</string>
    <string name="location">Location</string>
    <string name="none_text">Text</string>
    <string name="none_typing">Typing</string>
    <string name="recording">Recording</string>
    <string name="notification">Notification</string>
    <string name="none">None</string>
    <string name="invite_to">Invite to</string>
    <string name="update">Update</string>
    <string name="voice_message">Voice Message</string>
    <string name="no_media">No media to show here</string>
    <string name="buy_app">Buy This App</string>
    <string name="permission_contact_title">Permission to read contacts</string>
</resources>