<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/mediaSummaryContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mediaSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/mediaSummaryAll"
                android:layout_toLeftOf="@+id/mediaSummaryAll"
                android:background="@color/bg_gray" />

            <TextView
                android:id="@+id/mediaSummaryAll"
                android:layout_width="@dimen/media_summary_strip"
                android:layout_height="@dimen/media_summary_strip"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="2dp"
                android:background="@color/darkGreen"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/view_all"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/groupDetailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_hint"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/group_info"
                    android:textColor="#B6B6B6"
                    android:textSize="12sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/emotion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="text"
                    android:text="@string/group_info"
                    android:textColor="#727272"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/participantsCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/participants_0"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/participantsAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:padding="4dp"
                    android:text="@string/add_more"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

                <ProgressBar
                    android:id="@+id/participantsProgress"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/participantsCount"
                    android:indeterminate="true"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/participants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/participantsCount"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:paddingLeft="-16dp"
                    android:paddingRight="-16dp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/removeMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:drawableStart="@drawable/ic_open_in_new_red_24dp"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:text="@string/leave_group"
                android:textColor="@android:color/holo_red_light"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/userDetailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/userPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/userPhoneClick"
                    android:layout_toLeftOf="@+id/userPhoneClick"
                    android:gravity="center_vertical"
                    android:textColor="@color/textColor0"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/userPhoneClick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:src="@drawable/ic_phone" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:background="@color/textColorSecondary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status" />

            <TextView
                android:id="@+id/userStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/textColor0"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:background="@color/textColorSecondary" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/muteNotificationSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mute_notifications"
                android:textColor="@color/textColor0"
                android:textSize="16sp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
