<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="55">

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/vertical_gradient_black">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:src="@drawable/ic_keyboard_arrow_left_white_24dp" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/changeImage"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:src="@drawable/ic_camera_white" />
            </FrameLayout>
        </RelativeLayout>
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="45"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/phoneHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:fontFamily="sans-serif-light"
                android:letterSpacing="0.1"
                android:lineSpacingExtra="6.7sp"
                android:text="@string/phone_number"
                android:textColor="#b6b6b6"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/userPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phoneHeading"
                android:layout_marginBottom="24dp"
                android:background="@null"
                android:fontFamily="sans-serif"
                android:inputType="none"
                android:letterSpacing="0.05"
                android:lineSpacingExtra="3.3sp"
                android:maxLines="1"
                android:textColor="#727272"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/nameHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userPhone"
                android:layout_marginBottom="2dp"
                android:fontFamily="sans-serif-light"
                android:letterSpacing="0.1"
                android:lineSpacingExtra="6.7sp"
                android:text="@string/name"
                android:textColor="#b6b6b6"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/userNameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameHeading"
                android:layout_marginBottom="24dp"
                android:background="@null"
                android:fontFamily="sans-serif"
                android:hint="@string/your_name"
                android:inputType="text"
                android:letterSpacing="0.05"
                android:lineSpacingExtra="3.3sp"
                android:maxLines="1"
                android:textColor="#727272"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/statusHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userNameEdit"
                android:layout_marginBottom="2dp"
                android:fontFamily="sans-serif-light"
                android:letterSpacing="0.1"
                android:lineSpacingExtra="6.7sp"
                android:text="@string/status"
                android:textColor="#b6b6b6"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/userStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/statusHeading"
                android:layout_marginBottom="48dp"
                android:background="@null"
                android:fontFamily="sans-serif"
                android:inputType="text"
                android:letterSpacing="0.05"
                android:lineSpacingExtra="3.3sp"
                android:maxLines="1"
                android:text="@string/enter_your_status"
                android:textColor="#727272"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/done"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/round_blue"
                android:gravity="center"
                android:text="@string/update"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
